Salvando perfis de usuário na base de dados